# platform-switch

./: Cargo.toml  README.md  README.tpl
src/: lib.rs
